<resources>
    <!-->Nombre app</-->
    <string name="app_name">DietApp Calendario</string>

    <!-->Fragments</-->
    <string name="title_dieta">Dieta</string>
    <string name="title_recetas">Recetas</string>
    <string name="title_agregar_recetas">Agregar receta</string>
    <string name="title_detalle_receta">Detalles de la receta</string>
    <string name="title_editar_receta">Editar receta</string>
    <string name="title_configurar_dieta">Configurar dieta</string>
    <string name="title_opciones_menu">Opciones</string>

    <!-->Comidas</-->
    <string name="dieta_desayuno">Desayuno</string>
    <string name="dieta_mediamanana">Mediamañana</string>
    <string name="dieta_comida">Comida</string>
    <string name="dieta_merienda">Merienda</string>
    <string name="dieta_cena">Cena</string>

    <!-->Días semana</-->
    <string name="dia_lunes">Lunes</string>
    <string name="dia_martes">Martes</string>
    <string name="dia_miercoles">Miércoles</string>
    <string name="dia_jueves">Jueves</string>
    <string name="dia_viernes">Viernes</string>
    <string name="dia_sabado">Sábado</string>
    <string name="dia_domingo">Domingo</string>

    <!-->Botones generar dieta</-->
    <string name="generar_dieta">Generar dieta</string>
    <string name="description_editar">editar</string>
    <string name="generarPdf">Volver a generar PDF</string>


    <!-->Recetas</-->
    <string name="receta_buscar">Buscar por nombre...</string>
    <string name="agregar_nueva_receta">Agregar nueva receta</string>
    <string name="editar_receta">Editar receta</string>
    <string name="compartir_receta">Compartir receta</string>
    <string name="agregar_nombre">Nombre</string>
    <string name="agregar_categorias">Categorías</string>
    <string name="boton_agregar_categoria">Botón agregar ingrediente</string>
    <string name="boton_agregar_receta">Botón agregar receta</string>
    <string name="agregar_preparacion">Preparación</string>
    <string name="agregar_ingredientes">Ingredientes</string>
    <string name="agregar_enlace">Enlace de la receta</string>
    <string name="agregar_calorias">Calorías aprox. (kcal)</string>
    <string name="agregar_bt">Agregar</string>
    <string name="agregar_hora_comida">Hora de esta comida</string>
    <string name="eliminar_receta">Eliminar receta</string>
    <string name="avisoRepe">Ya has agregado </string>
    <string name="avisoMinimo">La receta necesita al menos:\n
    Un nombre\n
    Una categoría\n
    Si es comida completa, primer plato o acompañamiento\n
    La hora a la que se come este plato</string>
    <string name="avisoExiste">Esta receta ya existe</string>


    <!-- >Confirmación<-->
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="copiar_compra">Copiar lista de la compra</string>
    <string name="copiar_compra_exito">Lista copiada al portapapeles</string>
    <string name="cancelar">Operación cancelada</string>

    <string name="aviso_borrar">¿Borrar?</string>
    <string name="aviso_texto_borrar">¿Estás seguro/a de borrar esta deliciosa receta de </string>


    <string name="compartir_con">Compartir con</string>
    <string name="backup_exito">Copia de seguridad creada en: </string>
    <string name="aviso_restaurar">¿Restaurar?</string>
    <string name="aviso_texto_restaurar">¿Estás seguro/a de querer restaurar la copia de seguridad? Esta opción eliminará TODOS los datos existentes y no se puede deshacer</string>



    <!--> Generar dieta <-->
    <string name="aviso_acompanamiento">Necesitas al menos un acompañamiento para tu primer plato</string>
    <string name="aviso_mediodia">Para crear una dieta con el tipo de dieta que estás usando, necesitas \n
        7 comidas completas o 7 primeros platos junto a su acompañamiento para el mediodía\n
        7 cenas completas o 7 primeros platos para la cena junto a su acompañamiento\n
        1 desayuno\n
        Puedes crearlas en el menú Recetas.</string>
    <string name="aviso_cena">Necesitas al menos 7 cenas completas o combinadas para el tipo de dieta que estás usando</string>
    <string name="aviso_desayuno">Necesitas al menos 1 desayuno</string>
    <string name="pdf_guardado">PDF guardado en:</string>
    <string name="pdf_error">Error al guardar el PDF</string>
    <string name="pdf_titulo">¡Receta creada con éxito!</string>
    <string name="pdf_volver_generar">No hay ninguna dieta generada actualmente</string>
    <string name="dieta_tipo">Tipo de dieta</string>
    <string name="dieta_fav">Recetas favoritas para la siguiente dieta</string>
    <string name="dieta_actualizar_preferencias">Actualizar preferencias</string>
    <string name="nombre_archivo">MenuSemanal_</string>

    <!--> Opciones <-->
    <string name="opcion_menu_copia">Copia de seguridad</string>
    <string name="opcion_menu_tema">Usar tema oscuro</string>
    <string name="opcion_menu_idioma">Idioma</string>
    <string name="opcion_primer_semana">Primer día de la semana</string>
    <string name="backup_firebase">Firebase</string>
    <string name="backup_google_drive">Google Drive</string>
    <string name="crear_backup_gdrive">Crear copia de seguridad</string>
    <string name="restaurar_backup_gdrive">Restaurar copia de seguridad</string>
    <string name="backup_exito_titulo">¡Copia de seguridad creada con éxito!</string>

    <!--> Botones de explicar cosas <-->
    <string name="explica_botonPdf">Botón para volver a generar la dieta actual</string>
    <string name="explica_btEditarMenu">Botón para ir al menú de preferencias de dietas</string>
    <string name="explica_btAgregar">Agrega una nueva receta</string>
    <string name="explica_btEditarReceta">Edita esta receta</string>
    <string name="explica_btCompartir">¡Envía esta receta a un amigo!</string>
    <string name="no_dieta">Ninguna dieta creada. Crea tu primera dieta ahora</string>
    <string name="ayuda">Ayuda</string>
    <string name="explicacion_calorias_texto">Este valor es sólo informativo. No se utiliza al generar una dieta</string>
    <string name="dialog_inicial_acepto">He leído y comprendo el uso de esta app</string>
    <string name="dialog_inicial_texto">DietApp Calendario NO sustituye a un nutricionista. Esta app está diseñada para personas que conocen y comprenden un mínimo de cómo hacer una dieta. Por favor, si no sabe cómo seleccionar comidas para realizar una correcta dieta, acuda a un experto.</string>
    <string name="dialog_inicial_titulo_dieta">¡Bienvenido/a!</string>
    <string name="dialog_inicial_dieta">Te damos la bienvenida a DietApp Calendario. Para empezar a crear una dieta, necesitas: \n
        7 comidas completas o 7 primeros platos junto a su acompañamiento para el mediodía\n
        7 cenas completas o 7 primeros platos para la cena junto a su acompañamiento\n
        1 desayuno\n
        Puedes crearlas en el menú Recetas.</string>
    <string name="dialog_inicial_receta">Este es el menú de recetas. Aquí podrás ver y crear tus propias recetas. Puedes empezar a crearlas con el botón de abajo a la derecha</string>
    <string name="dialog_inicial_agregar_receta">Este es el menú para crear una receta. Una receta necesita al menos:\n
    Un nombre\n
    Una categoría\n
    Si es comida completa, primer plato o acompañamiento\n
    La hora a la que se come este plato\n
    ¡Ya puedes empezar a crear tus deliciosas recetas!</string>




    <!--> Recetas de prueba <-->
    <string name="pollo_nombre">Pollo con patatas</string>
    <string name="lomo_nombre">Lomo en salsa</string>
    <string name="albondigas_nombre">Albóndigas con salsa</string>
    <string name="pescado_nombre">Pescado con verduras</string>
    <string name="pescado_cebolla_nombre">Pescado en salsa cebolla</string>
    <string name="macarrones_nombre">Macarrones con tomate</string>
    <string name="lentejas_nombre">Lentejas con chorizo</string>
    <string name="pure_nombre">Puré de verduras</string>

    <string name="tortilla_nombre">Tortilla con jamón</string>
    <string name="hamburguesa_nombre">Hamburguesa con tomate</string>
    <string name="salchichas_nombre">Salchichas frescas</string>
    <string name="salpicon_nombre">Salpicón de marisco</string>
    <string name="ensalada_pera_nombre">Ensalada de pera</string>
    <string name="salteado_champinones_nombre">Salteado de champiñones</string>
    <string name="ensalada_atun_nombre">Ensalada de atún</string>
    <string name="acompana_lechuga">Lechuga</string>

    <string name="tostadas_nombre">Tostadas con tomate rallado</string>

    <string name="receta_descripcion">Esta es una receta. Puedes usarla, editarla, o eliminarla</string>
    <string name="inicial_pollo">Pollo</string>
    <string name="inicial_patata">Patata</string>
    <string name="inicial_lomo">Lomo</string>
    <string name="inicial_albondiga">Albóndigas</string>
    <string name="inicial_pescado">Pescado</string>
    <string name="inicial_cebolla">Cebolla</string>
    <string name="inicial_macarrones">Macarrones</string>
    <string name="inicial_salsa">Tomate frito</string>
    <string name="inicial_lentejas">Lentejas</string>
    <string name="inicial_chorizo">Chorizo</string>

    <string name="inicial_huevo">Huevo</string>
    <string name="inicial_jamon">Jamón</string>
    <string name="inicial_verdura">Verdura</string>
    <string name="inicial_hamburguesa">Hamburguesa</string>
    <string name="inicial_tomate">Tomate</string>
    <string name="inicial_pera">Pera</string>
    <string name="inicial_salchichas">Salchichas</string>
    <string name="inicial_salteado_champinon">Champiñones</string>
    <string name="inicial_atun">Atún</string>
    <string name="inicial_pan">Pan</string>
    <string name="inicial_marisco">Marisco</string>












    <!-->Categorías para buscar recetas</-->
    <string-array name="receta_categoria">
        <item>Todo</item> <!--0-->
        <item>Carne</item><!--1-->
        <item>Pescado</item><!--2-->
        <item>Legumbres</item><!--3-->
        <item>Cereal</item><!--4-->
        <item>Huevo</item><!--5-->
        <item>Verdura</item><!--6-->
        <item>Fruta</item><!--7-->
        <item>Lácteo</item><!--8-->
        <item>Comida completa</item><!--9-->
        <item>Primer plato</item><!--10-->
        <item>Acompañamiento</item><!--11-->
        <item>Comida mediodía</item><!--12-->
        <item>Desayuno</item><!--13-->
        <item>Mediamañana</item><!--14-->
        <item>Merienda</item><!--15-->
        <item>Cena</item><!--16-->
        <item>Postre</item><!--17-->
    </string-array>

    <!-->Tipos de dietas</-->
    <string-array name="dieta_tipo">
        <item>Omnívora</item>
        <item>Vegetariana</item>
        <item>Vegana</item>
    </string-array>

    <!-->Spinner idiomas</-->
    <string-array name="spinner_idiomas">
        <item>Español</item>
        <item>English</item>
    </string-array>
    <string name="pavo_vuelta_nombre">Filete de pavo</string>

</resources>