<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/idConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitEnd">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitEnd">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilName"
                    style="@style/textInputOuterField"
                    app:layout_constraintBottom_toTopOf="@+id/textoCategoria"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etName"
                        style="@style/textInputInnerField"
                        android:hint="@string/agregar_nombre"
                        android:text="" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/textoCategoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/agregar_categorias"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tilName"
                    app:layout_constraintBottom_toTopOf="@+id/listaCategorias"
                    />


                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/listaCategorias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/textoHoraComida"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textoCategoria"/>

                <TextView
                    android:id="@+id/textoHoraComida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/agregar_hora_comida"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/listaCategorias"
                    app:layout_constraintBottom_toTopOf="@+id/horaComida"
                    />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/horaComida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:selectionRequired="true"
                    app:layout_constraintBottom_toTopOf="@+id/tilPreparacion"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textoHoraComida">
                <!--com.google.android.material.chip.Chip
                    android:id="@+id/chipComidaCompleta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:clickable="true"
                    android:text="Comida completa"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPrimerPlato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:clickable="true"
                    android:text="Primer plato"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipAcompanamiento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:clickable="true"
                    android:text="Acompañamiento"/>
                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipDesayuno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:clickable="true"
                        android:text="Desayuno"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipMediamanana"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:clickable="true"
                        android:text="Mediamañana"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipMediodia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:clickable="true"
                        android:text="Mediodía"/>
                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipMerienda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:clickable="true"
                        android:text="Merienda"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipCena"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:clickable="true"
                        android:text="Cena"/>
                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipPostre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:clickable="true"
                        android:text="Postre" /-->

                </com.google.android.material.chip.ChipGroup>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPreparacion"
                    style="@style/textInputOuterField"
                    app:layout_constraintBottom_toTopOf="@+id/tilIngredientes"
                    android:lines="4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/horaComida">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPreparacion"
                        style="@style/textInputInnerField"
                        android:lines="4"
                        android:inputType="textMultiLine"
                        android:gravity="top|left"
                        android:hint="@string/agregar_preparacion"
                        android:text="" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilIngredientes"
                    style="@style/textInputCategoria"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/listaIngredientes"
                    app:layout_constraintEnd_toStartOf="@+id/botonAgregarIngrediente"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilPreparacion">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etIngredientes"
                        style="@style/textInputInnerField"
                        android:hint="@string/agregar_ingredientes"
                        android:text="" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/botonAgregarIngrediente"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ic_add"
                    android:scaleType="fitEnd"
                    android:textColor="?attr/colorPrimary"
                    android:contentDescription="@string/boton_agregar_categoria"
                    app:layout_constraintBottom_toBottomOf="@+id/tilIngredientes"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tilIngredientes" />

                <!-- ChipGroup para mostrar los chips -->
                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/listaIngredientes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/tilUrl"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilIngredientes"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilUrl"
                    style="@style/textInputOuterField"
                    app:layout_constraintBottom_toTopOf="@+id/tilCaloria"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/listaIngredientes">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUrl"
                        style="@style/textInputInnerField"
                        android:hint="@string/agregar_enlace"
                        android:inputType="textWebEmailAddress"
                        android:text="" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilCaloria"
                    style="@style/textInputCategoria"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/btAgregar"
                    app:layout_constraintEnd_toStartOf="@+id/helpButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilUrl">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etCaloria"
                        style="@style/textInputInnerField"
                        android:hint="@string/agregar_calorias"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/helpButton"
                    android:layout_width="32dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="10dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/ayuda"
                    android:src="@drawable/ic_ayuda"
                    app:layout_constraintBottom_toBottomOf="@+id/tilCaloria"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tilCaloria"
                    app:tint="#C4000000" />



                <Button
                    android:id="@+id/btAgregar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_agregar_receta"
                    android:drawableTint="?attr/colorOnPrimary"
                    android:text="@string/agregar_bt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilCaloria" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>